2003-07-24  Derek Price  <derek@ximbiot.com>

	* main.c: But the GNULIB gethostname accepts an int not ssize_t.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* main.c: Don't declare gethostname when we already have it to avoid
	decl conflicts.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* server.c (server_directory): Add a TRACE for OS X debugging.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* client.c: Avoid some warning from gcc -Wall.
	* lock.c: Ditto.
	* login.c: Ditto.
	* modules.c: Ditto.
	* server.c: Ditto.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* filesubr.c (isaccessible): Correct some double const warnings from
	protoize.
	* login.c (password_entry_parseline): Ditto.
	* server.c (kserver_authenticate_connection): Remove a multi-line
	string along with the warning from GCC.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* *.{c,h}: Back out the indent run.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* cvs.h: Move some includes into lib/system.h.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* *.{c,h}: Run these through GNU indent as per the NEWS file to fix
	some of the long function decls which came out of protoize.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* *.c: Run these through GCC's protoize to convert the pre-ANSI C
	function decls to C89 compliance.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* cvs.h: Remove support for the PTR macro, since we can assume void *
	under C89.  It also was not being made use of in very many places so
	even most K&R compilers must have supported it, or nobody was using
	K&R compilers.  We can also assume <stdarg.h> under C89, but move the
	include...
	* error.c: ...here, de-macro VA_START, and...
	* subr.c: ...put a copy here too, as well as de-macroing VA_START.
	* history.c: s/PTR /void */g;
	* modules.c: Ditto.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* cvs.h: Include GNULIB exit.h.

2003-07-20  Derek Price  <derek@ximbiot.com>

	* server.c: Add PAM support.